--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #f5f5f5; 
+    background: #f1d208; 
     color: #333; 
     font-family: 'Arial', sans-serif;
     text-align: center;
